--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>
     <body>
         <!-- navigation -->
-      <header>
-        <h1>
+    <header>
+      <h1>
             <a href="/">RUN BUDDY</a>
-        </h1>
-        <nav> 
+      </h1>
+      <nav> 
             <!-- Unordered list element --> 
         <ul>
             <!-- List item element-->
@@ -28,8 +29,8 @@
                 <a href="#reach-out">Reach Out</a>
             </li>
         </ul>
-        </nav>
-      </header>
+      </nav>
+    </header>
 
       <!-- hero/jumbotron-->
         <section>
