--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
 
       <!-- hero/jumbotron-->
         <section>
+            <div>
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <!-- Add form element -->
+            <form>
+            <label for="name">Enter full name:</label>
+            <input type="text" placeholder="Your Name" name="name" id="name"/>
+            <label for="email">Enter email address:</label>
+            <input type="text" placeholder="Email Address" name="email" id="email"/>
+            <label for="number">Enter telephone number:</label> 
+            <input type="text" placeholder="Phone Number" name="number" id="number"/>
+            </form>
+            </div>
         </section>
         
         <!-- "what we do" section -->
