--- a/index.html
+++ b/index.html
@@ -42,12 +42,31 @@
             <label for="name">Enter full name:</label>
             <input type="text" placeholder="Your Name" name="name" id="name"/>
             <label for="email">Enter email address:</label>
-            <input type="text" placeholder="Email Address" name="email" id="email"/>
-            <label for="number">Enter telephone number:</label> 
-            <input type="text" placeholder="Phone Number" name="number" id="number"/>
-            </form>
+            <input type="email" placeholder="Email Address" name="email" id="email"/>
+            <label for="phone">Enter a telephone number:</label> 
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+            <p>
+                Have you ever worked out with a trainer before?
+            </p>
+                <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                <label for="trainer-yes">Yes</label>
+                <input type="radio" name="trainer-confirm" id="trainer-no" />
+                <label for="trainer-no">No</label>
+            <p>
+                <label for="checkbox">
+                    I acknowledge that I am at least 18 years of age.
+                </label>
+                <input type="checkbox" name="age-confirm" id="checkbox" />
+            </p>
+            <p>
+                <button type="submit">
+                    Get running!
+                </button>
+            </p>
+                </form>
             </div>
         </section>
+        <!-- end hero -->
         
         <!-- "what we do" section -->
         <section>
