--- a/index.html
+++ b/index.html
@@ -142,10 +142,40 @@
             </p>
         </div>
         </article>
-         </section> 
+    </section> 
+
         <!-- "reach out" section -->
         <section id="reach-out">
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                    <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3303.8215556461796!2d-118.3290800488218!3d34.09971152257846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bf39c499a20b%3A0x31995d10f48b735f!2sSunset%20%26%20Vine!5e0!3m2!1sen!2sus!4v1597018178749!5m2!1sen!2sus" 
+                    width="400" 
+                    height="400" 
+                    frameborder="0" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    aria-hidden="false" 
+                    tabindex="0">
+                    </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main St <br/>
+                    Some Town, CA <br/>
+                    12345<br/>
+                    P: 555.RUN.BUDZ (555.786.2839) <br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+
+            </div>
         </section>
         </body>
 
@@ -157,5 +187,4 @@
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
-    <div></div>
 </html>
