--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 
       <!-- hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, officia voluptas. Dolores deserunt fuga, dolorem porro modi debitis neque nihil, optio quidem magni cum iste explicabo voluptatem, quia doloremque reiciendis.
+                </p>
+            </div>
+                
             <div class="hero-form">
                 <h3>Get Started Today!</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
