--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 
       <!-- hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel tenetur, eligendi, saepe reprehenderit fugit doloremque adipisci placeat facilis nostrum aut modi nam ducimus eveniet temporibus voluptatibus quia. In, enim aperiam.>
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today!</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
