--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 
     <!-- footer -->
     <footer>
-        <h2 >❤️  Made with love by Run Buddy</h2>
+        <div class="flex-row">
+          <h2>❤️  Made with love by Run Buddy</h2>
+        </div>
         <div>
             <a href="./privacy.policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
